# routes/payrollTaxesRouter.js
@@ -22,9 +22,10 @@ router.post('/',
     ],
     createPayrollTax);
 
-router.put('/:id',
+router.put('/',
     [
-        param('id').isInt({ min: 1 }).withMessage('ID must be a number'),
+        query('employee_id').isInt({ min: 1 }).withMessage('Employee ID must be a number'),
+        query('id').isInt({ min: 1 }).withMessage('ID must be a number'),
         body('name').isString().withMessage('Name must be a string'),
         body('rate').isFloat({ min: 0 }).withMessage('Rate must be a number'),
         body('applies_to').isString().withMessage('Applies_to must be a string'),
