# swagger.json
@@ -663,9 +663,7 @@
             "$ref": "#/components/responses/BadRequest"
           }
         }
-      }
-    },
-    "/payroll/taxes/{id}": {
+      },
       "put": {
         "summary": "Update a payroll tax",
         "description": "Update a payroll tax",
@@ -674,8 +672,18 @@
         ],
         "parameters": [
           {
+            "name": "employee_id",
+            "in": "query",
+            "description": "Employee id",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "minimum": 1
+            }
+          },
+          {
             "name": "id",
-            "in": "path",
+            "in": "query",
             "description": "Payroll tax id",
             "required": true,
             "schema": {
@@ -703,7 +711,9 @@
             "$ref": "#/components/responses/BadRequest"
           }
         }
-      },
+      }
+    },
+    "/payroll/taxes/{id}": {
       "delete": {
         "summary": "Delete a payroll tax",
         "description": "Delete a payroll tax",
